Adjusted theme menu (clipping text) and test to stop overflow positions of invisible elements in Library Sign-Up (normalize.css line 557)

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -28,8 +28,9 @@
 	left: 0px;
   margin: 10px 10px 10px 0;
 	position: absolute;
-	top: 5px;
+	top: 3px;
 	width: 100%;
+	text-overflow: clip;
 }
 /*** 605+ ***/
 @media screen and (min-width: 51.3124rem) {
